--- a/index.html
+++ b/index.html
@@ -8,14 +8,12 @@
     </head>
     <body>
     <img src="firstlist/environment.png" class="environment">
+    <img src="firstlist/sceintist.png" class="sceintist">
+    <img src="firstlist/clouds.png" class="clouds">
+    <img src="firstlist/board1.png" class="board">
     <img src="firstlist/sun.png" class="sun">
     <img src="firstlist/whatisenvironment.png" class="whatisenvironment">
     <img src="firstlist/thisis.png" class="thiis">
-    <img src="firstlist/waves.png" class="waves">
-    <img src="firstlist/board.png" class="board">
-    <img src="firstlist/sceintist.png" class="sceintist">
-    <img src="firstlist/waves2.png" class="waves2">
-    <img src="firstlist/clouds.png" class="clouds">
     <img src="firstlist/Due.png" class="due">
     <img src="firstlist/bird.png" class="bird">
     <img src="firstlist/basket.png" class="basket">
@@ -27,7 +25,6 @@
     <img src="firstlist/ground.png" class="ground">
     <img src="firstlist/racoon.png" class="racoon">
     <img src="firstlist/rubish.png" class="rubish">
-
     <div class="area" >
                 <ul class="circles">
                         <li></li>
